src/antlr/grammar/Jinja2withHTMLandCSS/gen/Jinja2withHTMLandCSSParser.java
// Generated from D:/compiler/jinja-flask-compiler/src/antlr/grammar/Jinja2withHTMLandCSS/Jinja2withHTMLandCSSParser.g4 by ANTLR 4.13.2
package antlr.grammar.Jinja2withHTMLandCSS.gen;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class Jinja2withHTMLandCSSParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		HTML_COMMENT=1, JINJA_COMMENT=2, JINJA_EXPR_OPEN=3, JINJA_STMT_OPEN=4, 
		OPEN_TAG_SLASH=5, OPEN_TAG=6, LBRACE=7, TEXT=8, TAG_WS=9, TAG_EQUALS=10, 
		TAG_BANG=11, SLASH_CLOSE=12, CLOSE_TAG=13, TAG_DQ_OPEN=14, TAG_SQ_OPEN=15, 
		VOID_TAG_NAME=16, TAG_NAME=17, ATTR_JINJA_EXPR_OPEN=18, ATTR_JINJA_STMT_OPEN=19, 
		DQ_CLOSE=20, ATTR_LBRACE=21, ATTR_TEXT=22, SQ_JINJA_EXPR_OPEN=23, SQ_JINJA_STMT_OPEN=24, 
		SQ_CLOSE=25, SQ_ATTR_LBRACE=26, SQ_ATTR_TEXT=27, JINJA_EXPR_CLOSE=28, 
		JINJA_WS=29, JINJA_DOT=30, JINJA_PIPE=31, JINJA_COMMA=32, JINJA_COLON=33, 
		JINJA_LPAREN=34, JINJA_RPAREN=35, JINJA_LBRACKET=36, JINJA_RBRACKET=37, 
		JINJA_EQ=38, JINJA_NE=39, JINJA_LE=40, JINJA_GE=41, JINJA_LT=42, JINJA_GT=43, 
		JINJA_ASSIGN=44, JINJA_PLUS=45, JINJA_MINUS=46, JINJA_STAR=47, JINJA_SLASH=48, 
		JINJA_PERCENT=49, JINJA_TRUE=50, JINJA_FALSE=51, JINJA_NONE=52, JINJA_NOT=53, 
		JINJA_AND=54, JINJA_OR=55, JINJA_IS=56, JINJA_IN=57, JINJA_STRING=58, 
		JINJA_NUMBER=59, JINJA_ID=60, JINJA_STMT_CLOSE=61, STMT_WS=62, KW_FOR=63, 
		KW_ENDFOR=64, KW_IF=65, KW_ELSE=66, KW_ENDIF=67, KW_SET=68, KW_BLOCK=69, 
		KW_ENDBLOCK=70, KW_IN=71, KW_NOT=72, KW_AND=73, KW_OR=74, KW_IS=75, STMT_TRUE=76, 
		STMT_FALSE=77, STMT_NONE=78, STMT_DOT=79, STMT_PIPE=80, STMT_COMMA=81, 
		STMT_COLON=82, STMT_LPAREN=83, STMT_RPAREN=84, STMT_LBRACKET=85, STMT_RBRACKET=86, 
		STMT_EQ=87, STMT_NE=88, STMT_LE=89, STMT_GE=90, STMT_LT=91, STMT_GT=92, 
		STMT_ASSIGN=93, STMT_PLUS=94, STMT_MINUS=95, STMT_STAR=96, STMT_SLASH=97, 
		STMT_PERCENT=98, STMT_STRING=99, STMT_NUMBER=100, STMT_ID=101, CSS_COMMENT=102, 
		CSS_WS=103, CSS_IMPORTANT=104, CSS_LCURLY=105, CSS_RCURLY=106, CSS_COLON=107, 
		CSS_SEMICOLON=108, CSS_COMMA=109, CSS_DOT=110, CSS_HASH=111, CSS_LPAREN=112, 
		CSS_RPAREN=113, CSS_STAR=114, CSS_GT=115, CSS_PLUS=116, CSS_TILDE=117, 
		CSS_PERCENT=118, CSS_SLASH=119, CSS_HEX_COLOR=120, CSS_STRING=121, CSS_NUMBER=122, 
		CSS_IDENT=123;
	public static final int
		RULE_prog = 0, RULE_htmlProg = 1, RULE_doctype = 2, RULE_content = 3, 
		RULE_htmlElement = 4, RULE_tagName = 5, RULE_attribute = 6, RULE_attrValue = 7, 
		RULE_attrValuePart = 8, RULE_sqAttrValuePart = 9, RULE_jinjaExpression = 10, 
		RULE_jinjaExpr = 11, RULE_jinjaArgList = 12, RULE_jinjaArg = 13, RULE_jinjaBlock = 14, 
		RULE_forBlock = 15, RULE_jinjaForOpen = 16, RULE_jinjaForClose = 17, RULE_ifBlock = 18, 
		RULE_jinjaIfOpen = 19, RULE_jinjaElse = 20, RULE_jinjaEndIf = 21, RULE_namedBlock = 22, 
		RULE_jinjaBlockOpen = 23, RULE_jinjaBlockClose = 24, RULE_jinjaSetStmt = 25, 
		RULE_stmtExpr = 26, RULE_stmtArgList = 27, RULE_stmtArg = 28, RULE_textNode = 29, 
		RULE_cssProg = 30, RULE_cssRule = 31, RULE_cssSelectorList = 32, RULE_cssSelector = 33, 
		RULE_cssSimpleSelector = 34, RULE_cssDeclaration = 35, RULE_cssValueList = 36, 
		RULE_cssValue = 37;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "htmlProg", "doctype", "content", "htmlElement", "tagName", "attribute", 
			"attrValue", "attrValuePart", "sqAttrValuePart", "jinjaExpression", "jinjaExpr", 
			"jinjaArgList", "jinjaArg", "jinjaBlock", "forBlock", "jinjaForOpen", 
			"jinjaForClose", "ifBlock", "jinjaIfOpen", "jinjaElse", "jinjaEndIf", 
			"namedBlock", "jinjaBlockOpen", "jinjaBlockClose", "jinjaSetStmt", "stmtExpr", 
			"stmtArgList", "stmtArg", "textNode", "cssProg", "cssRule", "cssSelectorList", 
			"cssSelector", "cssSimpleSelector", "cssDeclaration", "cssValueList", 
			"cssValue"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, "'</'", null, null, null, null, null, "'!'", 
			"'/>'", null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, "'}}'", null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, "'%}'", null, "'for'", "'endfor'", "'if'", "'else'", "'endif'", 
			"'set'", "'block'", "'endblock'", null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, "'}'", null, "';'", null, null, "'#'", 
			null, null, null, null, null, "'~'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "HTML_COMMENT", "JINJA_COMMENT", "JINJA_EXPR_OPEN", "JINJA_STMT_OPEN", 
			"OPEN_TAG_SLASH", "OPEN_TAG", "LBRACE", "TEXT", "TAG_WS", "TAG_EQUALS", 
			"TAG_BANG", "SLASH_CLOSE", "CLOSE_TAG", "TAG_DQ_OPEN", "TAG_SQ_OPEN", 
			"VOID_TAG_NAME", "TAG_NAME", "ATTR_JINJA_EXPR_OPEN", "ATTR_JINJA_STMT_OPEN", 
			"DQ_CLOSE", "ATTR_LBRACE", "ATTR_TEXT", "SQ_JINJA_EXPR_OPEN", "SQ_JINJA_STMT_OPEN", 
			"SQ_CLOSE", "SQ_ATTR_LBRACE", "SQ_ATTR_TEXT", "JINJA_EXPR_CLOSE", "JINJA_WS", 
			"JINJA_DOT", "JINJA_PIPE", "JINJA_COMMA", "JINJA_COLON", "JINJA_LPAREN", 
			"JINJA_RPAREN", "JINJA_LBRACKET", "JINJA_RBRACKET", "JINJA_EQ", "JINJA_NE", 
			"JINJA_LE", "JINJA_GE", "JINJA_LT", "JINJA_GT", "JINJA_ASSIGN", "JINJA_PLUS", 
			"JINJA_MINUS", "JINJA_STAR", "JINJA_SLASH", "JINJA_PERCENT", "JINJA_TRUE", 
			"JINJA_FALSE", "JINJA_NONE", "JINJA_NOT", "JINJA_AND", "JINJA_OR", "JINJA_IS", 
			"JINJA_IN", "JINJA_STRING", "JINJA_NUMBER", "JINJA_ID", "JINJA_STMT_CLOSE", 
			"STMT_WS", "KW_FOR", "KW_ENDFOR", "KW_IF", "KW_ELSE", "KW_ENDIF", "KW_SET", 
			"KW_BLOCK", "KW_ENDBLOCK", "KW_IN", "KW_NOT", "KW_AND", "KW_OR", "KW_IS", 
			"STMT_TRUE", "STMT_FALSE", "STMT_NONE", "STMT_DOT", "STMT_PIPE", "STMT_COMMA", 
			"STMT_COLON", "STMT_LPAREN", "STMT_RPAREN", "STMT_LBRACKET", "STMT_RBRACKET", 
			"STMT_EQ", "STMT_NE", "STMT_LE", "STMT_GE", "STMT_LT", "STMT_GT", "STMT_ASSIGN", 
			"STMT_PLUS", "STMT_MINUS", "STMT_STAR", "STMT_SLASH", "STMT_PERCENT", 
			"STMT_STRING", "STMT_NUMBER", "STMT_ID", "CSS_COMMENT", "CSS_WS", "CSS_IMPORTANT", 
			"CSS_LCURLY", "CSS_RCURLY", "CSS_COLON", "CSS_SEMICOLON", "CSS_COMMA", 
			"CSS_DOT", "CSS_HASH", "CSS_LPAREN", "CSS_RPAREN", "CSS_STAR", "CSS_GT", 
			"CSS_PLUS", "CSS_TILDE", "CSS_PERCENT", "CSS_SLASH", "CSS_HEX_COLOR", 
			"CSS_STRING", "CSS_NUMBER", "CSS_IDENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Jinja2withHTMLandCSSParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public Jinja2withHTMLandCSSParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgContext extends ParserRuleContext {
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
	 
		public ProgContext() { }
		public void copyFrom(ProgContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class CssEntryContext extends ProgContext {
		public CssProgContext cssProg() {
			return getRuleContext(CssProgContext.class,0);
		}
		public CssEntryContext(ProgContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Jinja2withHTMLandCSSParserListener ) ((Jinja2withHTMLandCSSParserListener)listener).enterCssEntry(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Jinja2withHTMLandCSSParserListener ) ((Jinja2withHTMLandCSSParserListener)listener).exitCssEntry(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Jinja2withHTMLandCSSParserVisitor ) return ((Jinja2withHTMLandCSSParserVisitor<? extends T>)visitor).visitCssEntry(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class HtmlEntryContext extends ProgContext {
		public HtmlProgContext htmlProg() {
			return getRuleContext(HtmlProgContext.class,0);
		}
		public HtmlEntryContext(ProgContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Jinja2withHTMLandCSSParserListener ) ((Jinja2withHTMLandCSSParserListener)listener).enterHtmlEntry(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Jinja2withHTMLandCSSParserListener ) ((Jinja2withHTMLandCSSParserListener)listener).exitHtmlEntry(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Jinja2withHTMLandCSSParserVisitor ) return ((Jinja2withHTMLandCSSParserVisitor<? extends T>)visitor).visitHtmlEntry(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		try {
			setState(78);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				_localctx = new HtmlEntryContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(76);
				htmlProg();
				}
				break;
			case 2:
				_localctx = new CssEntryContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(77);
				cssProg();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class HtmlProgContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(Jinja2withHTMLandCSSParser.EOF, 0); }
		public DoctypeContext doctype() {
			return getRuleContext(DoctypeContext.class,0);
		}
		public List<ContentContext> content() {
			return getRuleContexts(ContentContext.class);
		}
		public ContentContext content(int i) {
			return getRuleContext(ContentContext.class,i);
		}
		public HtmlProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_htmlProg; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Jinja2withHTMLandCSSParserListener ) ((Jinja2withHTMLandCSSParserListener)listener).enterHtmlProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Jinja2withHTMLandCSSParserListener ) ((Jinja2withHTMLandCSSParserListener)listener).exitHtmlProg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Jinja2withHTMLandCSSParserVisitor ) return ((Jinja2withHTMLandCSSParserVisitor<? extends T>)visitor).visitHtmlProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HtmlProgContext htmlProg() throws RecognitionException {
		HtmlProgContext _localctx = new HtmlProgContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_htmlProg);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				{
				setState(80);
				doctype();
				}
				break;
			}
			setState(86);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 8651224L) != 0)) {
				{
				{
				setState(83);
				content();
				}
				}
				setState(88);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(89);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DoctypeContext extends ParserRuleContext {
		public TerminalNode OPEN_TAG() { return getToken(Jinja2withHTMLandCSSParser.OPEN_TAG, 0); }
		public TerminalNode TAG_BANG() { return getToken(Jinja2withHTMLandCSSParser.TAG_BANG, 0); }
		public List<TagNameContext> tagName() {
			return getRuleContexts(TagNameContext.class);
		}
		public TagNameContext tagName(int i) {
			return getRuleContext(TagNameContext.class,i);
		}
		public TerminalNode CLOSE_TAG() { return getToken(Jinja2withHTMLandCSSParser.CLOSE_TAG, 0); }
		public DoctypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_doctype; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Jinja2withHTMLandCSSParserListener ) ((Jinja2withHTMLandCSSParserListener)listener).enterDoctype(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Jinja2withHTMLandCSSParserListener ) ((Jinja2withHTMLandCSSParserListener)listener).exitDoctype(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Jinja2withHTMLandCSSParserVisitor ) return ((Jinja2withHTMLandCSSParserVisitor<? extends T>)visitor).visitDoctype(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DoctypeContext doctype() throws RecognitionException {
		DoctypeContext _localctx = new DoctypeContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_doctype);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			match(OPEN_TAG);
			setState(92);
			match(TAG_BANG);
			setState(93);
			tagName();
			setState(94);
			tagName();
			setState(95);
			match(CLOSE_TAG);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ContentContext extends ParserRuleContext {
		public HtmlElementContext htmlElement() {
			return getRuleContext(HtmlElementContext.class,0);
		}
		public JinjaExpressionContext jinjaExpression() {
			return getRuleContext(JinjaExpressionContext.class,0);
		}
		public JinjaBlockContext jinjaBlock() {
			return getRuleContext(JinjaBlockContext.class,0);
		}
		public JinjaSetStmtContext jinjaSetStmt() {
			return getRuleContext(JinjaSetStmtContext.class,0);
		}
		public TextNodeContext textNode() {
			return getRuleContext(TextNodeContext.class,0);
		}
		public ContentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_content; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Jinja2withHTMLandCSSParserListener ) ((Jinja2withHTMLandCSSParserListener)listener).enterContent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Jinja2withHTMLandCSSParserListener ) ((Jinja2withHTMLandCSSParserListener)listener).exitContent(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Jinja2withHTMLandCSSParserVisitor ) return ((Jinja2withHTMLandCSSParserVisitor<? extends T>)visitor).visitContent(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ContentContext content() throws RecognitionException {
		ContentContext _localctx = new ContentContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_content);
		try {
			setState(102);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(97);
				htmlElement();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(98);
				jinjaExpression();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(99);
				jinjaBlock();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(100);
				jinjaSetStmt();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(101);
				textNode();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
